--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
 
         stage("Maven Build") {
             steps {
-                sh "mvn test"
+                sh "mvn clean install"
             }
         }
 
