update newlines of codes

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,14 +32,16 @@ pipeline {
             }
         }
         
-        stage('Build Docker Image') {
-    steps {
-        script {
-            def password = 'emmy'
-            sh "echo $password | sudo -S docker build -t emmylong1/talentplus-integration ."
+          stage('Build Docker Image') {
+            steps {
+                script {
+                    def password = 'emmy'
+                    sh """
+                    echo $password | sudo -S docker build -t emmylong1/talentplus-integration .
+                    """
+                }
+            }
         }
-    }
-}
 
         
         stage('Push Image to Docker Hub') {
