--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,30 +32,14 @@ pipeline {
             }
         }
         
-          stage('Build Docker Image') {
-            steps {
-                script {
-                    def password = 'Emmylong1'
-                    sh """
-                    echo $password | sudo -S docker build -t emmylong1/talentplus-integration .
-                    """
+          stage('Build docker image'){
+            steps{
+                script{
+                    sh 'docker build -t javatechie/devops-integration .'
                 }
             }
         }
-
         
-        stage('Push Image to Docker Hub') {
-            steps {
-                script {
-                    withCredentials([string(credentialsId: 'dockerhub-pwd', variable: 'Emmylong1')]) {
-                        sh 'sudo docker login -u emmylong1 -p $Emmylong1'
-                    }
-                    sh 'sudo docker push emmylong1/talentplus-integration'
-                }
-            }
-        }
-    }
-
     post {
         always {
             // Clean the workspace after each build
