--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    environment {
+        SUDO_PASSWORD = credentials('sudopwd') // Use the actual ID of your sudo credentials
+    }
+
     stages {
         stage("Clean Workspace") {
             steps {
@@ -10,7 +14,10 @@ pipeline {
 
         stage("Git checkout") {
             steps {
-                git branch: 'main', url: 'https://github.com/Emmylong1/Microservice-based-Application.git'
+                script {
+                    sh "git config --global credential.helper '!f() { echo password=$SUDO_PASSWORD; }; f'"
+                    sh "git clone https://github.com/Emmylong1/Microservice-based-Application.git"
+                }
             }
         }
 
@@ -19,27 +26,29 @@ pipeline {
                 sh "mvn clean install"
             }
         }
-
-        stage("Unit Testing") {
+           stage("Unit Testing") {
             steps {
                 sh "mvn verify -Dskip.unit.tests"
             }
         }
 
-        stage("Integration Testing") {
+         stage("Integration Testing") {
             steps {
                 sh "mvn clean install"
             }
         }
-        
-          stage('Build docker image'){
-            steps{
-                script{
-                    sh 'docker build -t emmylong1/talentplus-integration .'
+
+        stage('Build Docker Image') {
+            steps {
+                script {
+                    withCredentials([string(credentialsId: 'sudopwd', variable: 'SUDO_PASSWORD')]) {
+                        sh "echo $SUDO_PASSWORD | sudo -S docker build -t emmylong1/talentplus-integration ."
+                    }
                 }
             }
         }
     }
+
     post {
         always {
             // Clean the workspace after each build
